adding testing img

--- a/_posts/shows/2013-08-17-0001-01-01-into-the-dollhouse.md
+++ b/_posts/shows/2013-08-17-0001-01-01-into-the-dollhouse.md
@@ -6,3 +6,5 @@ subtitle: she could be a hundred people before she is through with her life
 ---
 
 _Into the Dollhouse_ is an original devised-movement performance that explores girlhood, nostalgia and looking back in order to walk forward. The piece takes inspiration from Meredith Monk’s _Education of the Girl Child_, Anna Halprin’s _Parades & Changes_, selected text from Charles Mee’s _Salome_, and songs from yesteryear that trigger reminiscing.
+
+![](/assets/test.png)
